UITest, code coverage and another fixes.

--- a/DCTheMovie/Podfile
+++ b/DCTheMovie/Podfile
@@ -6,4 +6,19 @@ target 'DCTheMovie' do
     pod 'Alamofire', '~> 4.4'
 	pod 'AlamofireImage'
 	pod 'SwiftyJSON'
+    pod 'OHHTTPStubs/Swift', '~> 6.0.0'
+end
+
+target 'DCTheMovieTests' do
+    pod 'Alamofire', '~> 4.4'
+    pod 'AlamofireImage'
+    pod 'SwiftyJSON'
+    pod 'OHHTTPStubs/Swift', '~> 6.0.0'
+end
+
+target 'DCTheMovieUITests' do
+    pod 'Alamofire', '~> 4.4'
+    pod 'AlamofireImage'
+    pod 'SwiftyJSON'
+    pod 'OHHTTPStubs/Swift', '~> 6.0.0'
 end
